# mm3d

./: .gitignore  .gitmodules  .svnignore  .travis.yml  AUTHORS  CMakeLists.txt  CODE  ChangeLog  INSTALL  INSTALL.WIN32  Makefile.am  Makefile.generic  Makefile.mingw  NEWS  README  README.SVN  README.md  TODO  TODO.qt4  TRANSLATORS  acinclude.m4  autogen.sh  autosetup.sh  cleanup.sh  config.h.generic  config.h.in  config.h.mingw  configure.ac  install.bat  mm3d-flatpak.yaml  mm3d-win32-installer.nsi  mm3d.icns  mm3d.reg
desktop/: Makefile.am  mm3d-16.xpm  mm3d.desktop  mm3d.xml  mm3d.xpm  moe.clover.mm3d.desktop  moe.clover.mm3d.metainfo.xml  moe.clover.mm3d.mm3dmodel.xml  x-mm3d.desktop
doc/html/: DONE  Makefile.am  TODO  olh_alignwin.htm  olh_alignwin.html  olh_alignwin.page  olh_animationdetails.htm  olh_animationdetails.html  olh_animationdetails.page  olh_animconvertwin.htm  olh_animconvertwin.html  olh_animconvertwin.page  olh_animexportwin.htm  olh_animexportwin.html  olh_animexportwin.page  olh_animsetwin.htm  olh_animsetwin.html  olh_animsetwin.page  olh_animwin.htm  olh_animwin.html  olh_animwin.page  olh_autoassignjointwin.htm  olh_autoassignjointwin.html  olh_autoassignjointwin.page  olh_backgroundimagedetails.htm  olh_backgroundimagedetails.html  olh_backgroundimagedetails.page  olh_backgroundwin.htm  olh_backgroundwin.html  olh_backgroundwin.page  olh_boolwin.htm  olh_boolwin.html  olh_boolwin.page  olh_cal3d.htm  olh_cal3d.html  olh_cal3d.page  olh_cal3dprompt.htm  olh_cal3dprompt.html  olh_cal3dprompt.page  olh_cmdline.htm  (+149 more)
i18n/: Makefile.am  mm3d_bork.ts  mm3d_de.ts  mm3d_fr.ts  mm3d_ref.ts  mm3d_sk.ts  qt_ar.ts  qt_cs.ts  qt_de.ts  qt_fr.ts  qt_iw.ts  qt_ru.ts  qt_sk.ts  qt_untranslated.ts  qt_zh_CN.ts
src/: 3dm.cc  Makefile.am  copyright.h  icon.rc  maketags.sh  stdcmds.cc  stdcmds.h  stdfilters.cc  stdfilters.h  stdtexfilters.cc  stdtexfilters.h  stdtools.cc  stdtools.h  win_manifest.xml  win_resource.rc  windres_resource.rc
src/commands/: Makefile.am  aligncmd.cc  aligncmd.h  assignjointcmd.cc  assignjointcmd.h  backgroundcmd.cc  backgroundcmd.h  capcmd.cc  capcmd.h  copycmd.cc  copycmd.h  deletecmd.cc  deletecmd.h  dupcmd.cc  dupcmd.h  edgedivcmd.cc  edgedivcmd.h  edgeturncmd.cc  edgeturncmd.h  extrudecmd.cc  extrudecmd.h  faceoutcmd.cc  faceoutcmd.h  flattencmd.cc  flattencmd.h  flipcmd.cc  flipcmd.h  hidecmd.cc  hidecmd.h  invertcmd.cc  invertcmd.h  invnormalcmd.cc  invnormalcmd.h  jointcmd.cc  jointcmd.h  makefacecmd.cc  makefacecmd.h  offsetcmd.cc  offsetcmd.h  pastecmd.cc  (+19 more)
src/depui/: Makefile.am  errorobj.cc  errorobj.h  miscwidgets.cc  miscwidgets.h  modelviewport.cc  modelviewport.h  textureframe.cc  textureframe.h  texwidget.cc  texwidget.h
src/implui/: Makefile.am  aboutwin.cc  aboutwin.h  alignwin.cc  alignwin.h  animconvertwin.cc  animconvertwin.h  animeditwin.cc  animeditwin.h  animexportwin.cc  animexportwin.h  animsetwin.cc  animsetwin.h  animwidget.cc  animwidget.h  animwin.cc  animwin.h  autoassignjointwin.cc  autoassignjointwin.h  backgroundselect.cc  backgroundselect.h  backgroundwin.cc  backgroundwin.h  boolpanel.cc  boolpanel.h  boolwin.cc  boolwin.h  cal3dprompt.cc  cal3dprompt.h  contextgroup.cc  contextgroup.h  contextinfluences.cc  contextinfluences.h  contextname.cc  contextname.h  contextpanel.cc  contextpanel.h  contextposition.cc  contextposition.h  contextprojection.cc  (+87 more)
src/libmm3d/: Makefile.am  asciifilter.cc  asciifilter.h  binaryfilter.cc  binaryfilter.h  binutil.h  bsptree.cc  bsptree.h  cal3dfilter.cc  cal3dfilter.h  cmdlinemgr.cc  cmdlinemgr.h  cobfilter.cc  cobfilter.h  d3dfilter.cc  d3dfilter.h  datadest.cc  datadest.h  datasource.cc  datasource.h  drawcontext.h  dxffilter.cc  dxffilter.h  endianconfig.h  file_closer.h  filedatadest.cc  filedatadest.h  filedatasource.cc  filedatasource.h  filefactory.cc  filefactory.h  filtermgr.cc  filtermgr.h  glheaders.h  glmath.cc  glmath.h  iqefilter.cc  iqefilter.h  local_array.h  local_ptr.h  (+91 more)
src/mm3dcore/: 3dmprefs.cc  3dmprefs.h  Makefile.am  align.cc  align.h  allocstats.cc  allocstats.h  bounding.cc  bounding.h  cmdline.cc  cmdline.h  cmdmgr.cc  cmdmgr.h  command.cc  command.h  contextpanelobserver.cc  contextpanelobserver.h  contextwidget.cc  contextwidget.h  decal.cc  decal.h  decalmgr.cc  decalmgr.h  luaif.cc  luaif.h  luascript.cc  luascript.h  menuconf.h  modeltest.cc  modeltest.h  modelviewport.cc  modelviewport.h  mq3compat.h  mq3macro.h  pluginapi.h  pluginmgr.cc  pluginmgr.h  prefparse.cc  prefparse.h  prefs.cc  (+19 more)
src/pixmap/: Makefile.am  arrow.xpm  atrfartool.xpm  atrneartool.xpm  bgmovetool.xpm  bgscaletool.xpm  crosshairrow.xpm  cubetool.xpm  cylindertool.xpm  dragvertextool.xpm  ellipsetool.xpm  extrudetool.xpm  jointtool.xpm  mm3dlogo-16x16.xpm  mm3dlogo-32x32.h  mm3dlogo-32x32.xpm  movetool.xcf  movetool.xpm  mviewport.xpm  nulltool.xpm  play.xpm  pointtool.xpm  polytool.xpm  projtool.xpm  rectangletool.xpm  rotatetool.xpm  scaletool.xpm  selectbonetool.xpm  selectconnectedtool.xpm  selectfacetool.xpm  selectgrouptool.xpm  selectpointtool.xpm  selectprojtool.xpm  selectvertextool.xpm  sheartool.xpm  stop.xpm  texframe.xpm  torustool.xpm  vertextool.xpm  zoomin.xpm  (+1 more)
src/qtui/: Makefile.am  alignwin.ui  animconvertwin.ui  animeditwin.ui  animexportwin.ui  animsetwin.ui  animwidget.ui  autoassignjointwin.ui  backgroundselect.ui  backgroundwin.ui  boolwin.ui  cal3dprompt.ui  contextgroup.ui  contextinfluences.ui  contextname.ui  contextposition.ui  contextprojection.ui  contextrotation.ui  dummy.c  extrudewin.ui  groupclean.ui  groupwin.ui  helpwin.ui  iqeprompt.ui  jointwin.ui  keyvaluewin.ui  mapdirection.ui  md3prompt.ui  mergewin.ui  metawin.ui  modelview.ui  ms3dprompt.ui  newanim.ui  objprompt.ui  offsetwin.ui  painttexturewin.ui  pluginwin.ui  pointwin.ui  projectionwin.ui  resources.qrc  (+9 more)
src/tests/: Makefile.common  TODO  test_common.h
src/tools/: Makefile.am  atrfartool.cc  atrfartool.h  atrneartool.cc  atrneartool.h  attracttool.cc  backgroundtool.cc  (+71 more)
translations/: Makefile.am  mm3d_bork.ts  mm3d_de.ts  mm3d_fr.ts  mm3d_ref.ts  mm3d_sk.ts
(+72 files in other folders)
